# atlasapiclient

./: .buildinfo  .gitignore  LICENSE  README.md  about.html  api-reference.html  dev.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  recipes.html  search.html  searchindex.js  troubleshooting.html  users.html
.github/workflows/: docs.yml  draft-pdf.yml  publish.yml  testing.yml
_sources/: about.rst  about.rst.txt  api-reference.rst.txt  dev.rst.txt  index.rst  index.rst.txt  install.rst.txt  recipes.rst.txt  troubleshooting.rst  users.rst  users.rst.txt
atlasapiclient/: __init__.py  authentication.py  client.py  config.py  exceptions.py  utils.py
atlasapiclient/config_files/: api_config_template.yaml
atlasapiclient/tests/: test_client.py
docs/: requirements.txt
docs/source/: about.rst  conf.py  dev.rst  index.rst  install.rst  recipes.rst  users.rst
paper/: paper.bib  paper.md
test/: conftest.py  test_authentication.py  test_client.py  test_config.py  test_exceptions.py  test_importlib.py  test_integration.py  test_utils.py
test/integration/: test_api_read.py  test_api_write.py
