[build-system]                                                                                                                                                                                  
requires = ["setuptools", "setuptools-scm"]                                                                                  
build-backend = "setuptools.build_meta"                                                                                      
                                                                                                                             
[project]                                                                                                                    
name = "atlasapiclient"                                                                                                             
version = "v0.1.0"                                                                                                           
                                                                                                                             
authors = [                                                                                                                  
    {name = "Heloise Stevance", email = "hfstevance@gmail.com"},                                                             
]                                                                                                                            
description = "API Client utility package for the ATLAS Transient Server"                                                                                        
readme = "README.md"                                                                                                        
requires-python = ">=3.9"                                                                                                    
keywords = ["astronomy", "ATLAS API"]                                                                                        
license = {text = "BSD-3-Clause"}                                                                                            
dependencies = [                                                                                                             
    "numpy", 
    "pandas",
    "pytest",                                                                                                                
    "requests",                                                                                                              
    "tqdm",                                                                                                                  
    "yaml",                                                                                                                  
    'importlib-metadata; python_version>"3.9"',                                                                              
]                                                                                                                            
dynamic = ["version"]                                                                                                        
                                                                                                                             
# See some of the stuff I have in the hoki .toml file                                                                        
                                                                                                                             
                                                                                                                             
#[project.optional-dependencies]                                                                                             
#pdf = ["ReportLab>=1.2", "RXP"]                                                                                             
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]                                                                               
                                                                                                                             
#[project.scripts]                                                                                                           
#my-script = "my_package.module:function"                                                                                    
                                                                                                                             
# ... other project metadata fields as specified in:                                                                         
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/         
